# SCURM_test

./: .gitattributes  Navigation2 记录.md  Navigation2.md  README.md
follow/src/: action_tree.xml  goal_updater.cpp
test1/: 1.1rqt&cli.md  ROS题补充.md
test1/install/: local_setup.sh  setup.sh
test1/install/sentry_description/share/sentry_description/: package.sh
test1/install/subscriber/lib/subscriber/: subscriber
test1/install/subscriber/share/subscriber/: package.sh
test1/install/transformer/lib/transformer/: transformer
test1/install/transformer/share/transformer/: package.bash  package.sh  package.zsh
test1/log/: latest_build
test1/mycodespace/test_cpp/: CMakeLists.txt  package.xml
test1/mycodespace/test_cpp/src/: subscriber.cpp
test1/mycodespace/tf/: CMakeLists.txt  package.xml
test1/mycodespace/tf/src/: transformer.cpp
test2/: code1.py  部署openvino题补充.md
test3/follow/: CMakeLists.txt  package.xml
test3/follow/src/: follow.cpp
